2013-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Pass through Inf and NaN to image code when
	the pixel value is presented in column 4. The column 3 (z) case was
	already handled.

2013-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c(lp_parse): Fix bug involving color assignment to contours.
	Unfortunately this negates a previous fix that allowed explicit surface
	colors in a hidden3d plot to implicitly do "set hidden3d offset 0".

	* src/qtterminal/QtGnuplotScene.cpp: gnuplot_qt can handle hotkey 'i'
	in persist mode.  Revise the timing code for responding to mouse button
	press/release (needed for Qt5).

2013-10-26  Thomas Bleher <tbleher@gmx.de>

	* src/qtterminal/qt_term.cpp:  Change the Qt terminal to only create its
	data when initialized (to avoid the Static Initialization Order Fiasco)
	and to destroy its data in a gnuplot atexit handler.

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii df_readmatrix):  If the first field of a
	tab-separated csv file was empty, it would be incorrectly ignored when
	processing that input line.
	Bugfix. 

	* src/wxterminal/wxt_gui.cpp:  Extend toggling active region in key box
	to include enhanced text as well as non-enhanced text.
	Bugfix. 

2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/stdfn.c(gp_atexit gp_exit) src/stdfn.h src/command.c(exit_command)
	src/plot.c(main) src/qtterminal/qt_term.cpp src/win/winmain.c
	src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo_helpers.c
	src/wxterminal/wxt_gui.cpp term/be.trm term/x11.trm:

	Create gnuplot atexit handlers that are called before exit(3)
	
	Normal atexit-handlers are called in the reverse order of registration.
	This causes problems when a library has its own global destructors which
	do not handle the case that objects of the library may still be active
	and destroyed in the atexit handler. This has been observed with Qt.
	