@@ -1,3 +1,12 @@
+2013-11-06  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c src/axis.h src/eval.c src/save.c src/set.c src/show.c:
+	Replace axis_defaults[index].name with axis_name(index) everywhere.
+	Currently this is a macro that expands to the same thing, but is now
+	ready to be replaced by something more complicated.
+
+	* src/unset.c (unset_tics): Change the flag for unset all to -1.
+
 2013-10-29  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot3d.c (get_3ddata): Pass through Inf and NaN to image code when
